--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,21 @@
 		</dependency>
 		
 	</dependencies>
+	
+<distributionManagement>
+	<repository>
+		<id>nexus</id>
+		<name>Srini Nexus First Release</name>
+		<url>http://35.194.3.171:8081/repository/srini-release/</url>
+	</repository>
+
+	<snapshotRepository>
+		<id>nexus</id>
+		<name>Srini Nexus First Release</name>
+		<url>http://35.194.3.171:8081/repository/srini-snapshot/</url>
+	</snapshotRepository>
+
+</distributionManagement>
 
   <build>
     <finalName>maven-web-application-master</finalName>
