--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,14 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.nit</groupId>
+ <!-- <groupId>com.nit</groupId>
   <artifactId>maven-web-application-master</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>war</packaging> -->
+	
+  <groupId>com.nit</groupId>
+  <artifactId>maven-web-application-master</artifactId>
+  <version>0.0.1</version>
   <packaging>war</packaging>
 
   <name>maven-web-application-master Maven Webapp</name>
